fix codesmels and refactor